--- a/qa-anvil.planx-pla.net/manifest.json
+++ b/qa-anvil.planx-pla.net/manifest.json
@@ -7,27 +7,27 @@
     "autodeploy": "yes"
   },
   "versions": {
-    "access-backend": "quay.io/cdis/access-backend:2021.06",
+    "access-backend": "quay.io/cdis/access-backend:2023.12",
     "ambassador": "quay.io/datawire/ambassador:0.60.3",
-    "arborist": "quay.io/cdis/arborist:2021.06",
+    "arborist": "quay.io/cdis/arborist:2023.12",
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:0.8",
-    "fence": "quay.io/cdis/fence:2021.06",
+    "fence": "quay.io/cdis/fence:2023.12",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.15.3-debian-cloudwatch-1.0",
-    "guppy": "quay.io/cdis/guppy:2021.06",
-    "hatchery": "quay.io/cdis/hatchery:2021.06",
-    "indexd": "quay.io/cdis/indexd:2021.06",
-    "manifestservice": "quay.io/cdis/manifestservice:2021.06",
-    "metadata": "quay.io/cdis/metadata-service:2021.06",
-    "peregrine": "quay.io/cdis/peregrine:2021.06",
-    "pidgin": "quay.io/cdis/pidgin:2021.06",
-    "portal": "quay.io/cdis/data-portal:2021.06",
-    "revproxy": "quay.io/cdis/nginx:2021.06",
-    "sheepdog": "quay.io/cdis/sheepdog:2021.06",
-    "sower": "quay.io/cdis/sower:2021.06",
-    "spark": "quay.io/cdis/gen3-spark:2021.06",
-    "tube": "quay.io/cdis/tube:2021.06",
-    "ssjdispatcher": "quay.io/cdis/ssjdispatcher:2021.06",
-    "wts": "quay.io/cdis/workspace-token-service:2021.06",
+    "guppy": "quay.io/cdis/guppy:2023.12",
+    "hatchery": "quay.io/cdis/hatchery:2023.12",
+    "indexd": "quay.io/cdis/indexd:2023.12",
+    "manifestservice": "quay.io/cdis/manifestservice:2023.12",
+    "metadata": "quay.io/cdis/metadata-service:2023.12",
+    "peregrine": "quay.io/cdis/peregrine:2023.12",
+    "pidgin": "quay.io/cdis/pidgin:2023.12",
+    "portal": "quay.io/cdis/data-portal:2023.12",
+    "revproxy": "quay.io/cdis/nginx:2023.12",
+    "sheepdog": "quay.io/cdis/sheepdog:2023.12",
+    "sower": "quay.io/cdis/sower:2023.12",
+    "spark": "quay.io/cdis/gen3-spark:2023.12",
+    "tube": "quay.io/cdis/tube:2023.12",
+    "ssjdispatcher": "quay.io/cdis/ssjdispatcher:2023.12",
+    "wts": "quay.io/cdis/workspace-token-service:2023.12",
     "dashboard": "quay.io/cdis/gen3-statics:2020.10"
   },
   "global": {
@@ -45,11 +45,12 @@
     "tier_access_level": "regular",
     "tier_access_limit": 50,
     "public_datasets": true,
-    "lb_type": "internal"
+    "lb_type": "internal",
+    "es7": true
   },
   "ssjdispatcher": {
     "job_images": {
-      "indexing": "quay.io/cdis/indexs3client:2021.06"
+      "indexing": "quay.io/cdis/indexs3client:2023.12"
     }
   },
   "arborist": {
@@ -90,7 +91,7 @@
       "action": "export",
       "container": {
         "name": "job-task",
-        "image": "quay.io/cdis/pelican-export:2021.06",
+        "image": "quay.io/cdis/pelican-export:2023.12",
         "pull_policy": "Always",
         "env": [
           {
@@ -158,7 +159,7 @@
       "action": "export-files",
       "container": {
         "name": "job-task",
-        "image": "quay.io/cdis/pelican-export:2021.06",
+        "image": "quay.io/cdis/pelican-export:2023.12",
         "pull_policy": "Always",
         "env": [
           {
@@ -224,7 +225,7 @@
       "serviceAccountName": "jobs-qa-anvil-planx-pla-net",
       "container": {
         "name": "job-task",
-        "image": "quay.io/cdis/metadata-manifest-ingestion:2021.06",
+        "image": "quay.io/cdis/metadata-manifest-ingestion:2023.12",
         "pull_policy": "Always",
         "env": [
           {
@@ -264,7 +265,7 @@
       "serviceAccountName": "jobs-qa-anvil-planx-pla-net",
       "container": {
         "name": "job-task",
-        "image": "quay.io/cdis/get-dbgap-metadata:2021.06",
+        "image": "quay.io/cdis/get-dbgap-metadata:2023.12",
         "pull_policy": "Always",
         "env": [],
         "volumeMounts": [
@@ -295,7 +296,7 @@
       "serviceAccountName": "jobs-qa-anvil-planx-pla-net",
       "container": {
         "name": "job-task",
-        "image": "quay.io/cdis/manifest-indexing:2021.06",
+        "image": "quay.io/cdis/manifest-indexing:2023.12",
         "pull_policy": "Always",
         "env": [
           {
@@ -336,7 +337,7 @@
       "serviceAccountName": "jobs-qa-anvil-planx-pla-net",
       "container": {
         "name": "job-task",
-        "image": "quay.io/cdis/download-indexd-manifest:2021.06",
+        "image": "quay.io/cdis/download-indexd-manifest:2023.12",
         "pull_policy": "Always",
         "env": [
           {
