--- a/qa-brain.planx-pla.net/manifest.json
+++ b/qa-brain.planx-pla.net/manifest.json
@@ -8,25 +8,25 @@
   },
   "versions": {
     "ambassador": "quay.io/datawire/ambassador:1.4.2",
-    "manifestservice": "quay.io/cdis/manifestservice:integration202106",
-    "arborist": "quay.io/cdis/arborist:integration202106",
+    "manifestservice": "quay.io/cdis/manifestservice:2023.12",
+    "arborist": "quay.io/cdis/arborist:2023.12",
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:0.8",
     "dashboard": "quay.io/cdis/gen3-statics:integration202103",
-    "hatchery": "quay.io/cdis/hatchery:integration202106",
-    "fence": "quay.io/cdis/fence:integration202106",
-    "indexd": "quay.io/cdis/indexd:integration202106",
-    "peregrine": "quay.io/cdis/peregrine:integration202106",
-    "pidgin": "quay.io/cdis/pidgin:integration202106",
-    "revproxy": "quay.io/cdis/nginx:integration202106",
-    "sheepdog": "quay.io/cdis/sheepdog:integration202106",
-    "portal": "quay.io/cdis/data-portal:integration202106",
+    "hatchery": "quay.io/cdis/hatchery:2023.12",
+    "fence": "quay.io/cdis/fence:2023.12",
+    "indexd": "quay.io/cdis/indexd:2023.12",
+    "peregrine": "quay.io/cdis/peregrine:2023.12",
+    "pidgin": "quay.io/cdis/pidgin:2023.12",
+    "revproxy": "quay.io/cdis/nginx:2023.12",
+    "sheepdog": "quay.io/cdis/sheepdog:2023.12",
+    "portal": "quay.io/cdis/data-portal:2023.12",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.15.3-debian-cloudwatch-1.0",
-    "ssjdispatcher": "quay.io/cdis/ssjdispatcher:integration202106",
-    "spark": "quay.io/cdis/gen3-spark:integration202106",
-    "tube": "quay.io/cdis/tube:integration202106",
-    "guppy": "quay.io/cdis/guppy:integration202106",
-    "wts": "quay.io/cdis/workspace-token-service:integration202106",
-    "metadata": "quay.io/cdis/metadata-service:integration202106"
+    "ssjdispatcher": "quay.io/cdis/ssjdispatcher:2023.12",
+    "spark": "quay.io/cdis/gen3-spark:2023.12",
+    "tube": "quay.io/cdis/tube:2023.12",
+    "guppy": "quay.io/cdis/guppy:2023.12",
+    "wts": "quay.io/cdis/workspace-token-service:2023.12",
+    "metadata": "quay.io/cdis/metadata-service:2023.12"
   },
   "arborist": {
     "deployment_version": "2"
@@ -63,11 +63,12 @@
     "tier_access_level": "regular",
     "tier_access_limit": "50",
     "public_datasets": true,
-    "lb_type": "internal"
+    "lb_type": "internal",
+    "es7": true
   },
   "ssjdispatcher": {
     "job_images": {
-      "indexing": "quay.io/cdis/indexs3client:integration202106"
+      "indexing": "quay.io/cdis/indexs3client:2023.12"
     }
   },
   "canary": {
