--- a/qa-dcfdemo.planx-pla.net/manifest.json
+++ b/qa-dcfdemo.planx-pla.net/manifest.json
@@ -7,25 +7,25 @@
     "autodeploy": "yes"
   },
   "versions": {
-    "arborist": "quay.io/cdis/arborist:2020.03",
+    "arborist": "quay.io/cdis/arborist:2023.12",
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:0.8",
-    "fence": "quay.io/cdis/fence:2020.03",
+    "fence": "quay.io/cdis/fence:2023.12",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.15.3-debian-cloudwatch-1.0",
-    "indexd": "quay.io/cdis/indexd:2020.03",
+    "indexd": "quay.io/cdis/indexd:2023.12",
     "jupyterhub": "quay.io/occ_data/jupyterhub:master",
-    "peregrine": "quay.io/cdis/peregrine:2020.03",
-    "pidgin": "quay.io/cdis/pidgin:2020.03",
-    "portal": "quay.io/cdis/data-portal:2020.03",
+    "peregrine": "quay.io/cdis/peregrine:2023.12",
+    "pidgin": "quay.io/cdis/pidgin:2023.12",
+    "portal": "quay.io/cdis/data-portal:2023.12",
     "revproxy": "quay.io/cdis/nginx:1.17.6-ctds-1.0.1",
-    "sheepdog": "quay.io/cdis/sheepdog:2020.03",
-    "spark": "quay.io/cdis/gen3-spark:2020.03",
-    "tube": "quay.io/cdis/tube:2020.03",
-    "ssjdispatcher": "quay.io/cdis/ssjdispatcher:2020.03",
+    "sheepdog": "quay.io/cdis/sheepdog:2023.12",
+    "spark": "quay.io/cdis/gen3-spark:2023.12",
+    "tube": "quay.io/cdis/tube:2023.12",
+    "ssjdispatcher": "quay.io/cdis/ssjdispatcher:2023.12",
     "dashboard": "quay.io/cdis/gen3-statics:master",
-    "guppy": "quay.io/cdis/guppy:2020.03",
-    "hatchery": "quay.io/cdis/hatchery:2020.03",
+    "guppy": "quay.io/cdis/guppy:2023.12",
+    "hatchery": "quay.io/cdis/hatchery:2023.12",
     "ambassador": "quay.io/datawire/ambassador:0.60.3",
-    "wts": "quay.io/cdis/workspace-token-service:2020.03",
+    "wts": "quay.io/cdis/workspace-token-service:2023.12",
     "manifestservice": "quay.io/cdis/manifestservice:0.2.0"
   },
   "indexd": {
@@ -129,7 +129,8 @@
     "useryaml_s3path": "s3://cdis-gen3-users/qa/user.yaml",
     "dispatcher_job_num": "10",
     "netpolicy": "on",
-    "lb_type": "internal"
+    "lb_type": "internal",
+    "es7": true
   },
   "canary": {
     "default": 0
