--- a/qa-nde.planx-pla.net/manifest.json
+++ b/qa-nde.planx-pla.net/manifest.json
@@ -5,20 +5,20 @@
   ],
   "versions": {
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:0.8",
-    "arborist": "quay.io/cdis/arborist:2020.08",
-    "fence": "quay.io/cdis/fence:2020.08",
-    "indexd": "quay.io/cdis/indexd:2020.08",
+    "arborist": "quay.io/cdis/arborist:2023.12",
+    "fence": "quay.io/cdis/fence:2023.12",
+    "indexd": "quay.io/cdis/indexd:2023.12",
     "portal": "quay.io/cdis/data-ecosystem-portal:1.2.4",
-    "revproxy": "quay.io/cdis/nginx:2020.08",
-    "dashboard": "quay.io/cdis/gen3-statics:2020.08",
-    "wts": "quay.io/cdis/workspace-token-service:2020.08",
-    "manifestservice": "quay.io/cdis/manifestservice:2020.08",
-    "hatchery": "quay.io/cdis/hatchery:2020.08",
+    "revproxy": "quay.io/cdis/nginx:2023.12",
+    "dashboard": "quay.io/cdis/gen3-statics:2023.12",
+    "wts": "quay.io/cdis/workspace-token-service:2023.12",
+    "manifestservice": "quay.io/cdis/manifestservice:2023.12",
+    "hatchery": "quay.io/cdis/hatchery:2023.12",
     "ambassador": "quay.io/datawire/ambassador:1.4.2",
-    "guppy": "quay.io/cdis/guppy:2020.08",
-    "sheepdog": "quay.io/cdis/sheepdog:2020.08",
-    "peregrine": "quay.io/cdis/peregrine:2020.08",
-    "pidgin": "quay.io/cdis/pidgin:2020.08"
+    "guppy": "quay.io/cdis/guppy:2023.12",
+    "sheepdog": "quay.io/cdis/sheepdog:2023.12",
+    "peregrine": "quay.io/cdis/peregrine:2023.12",
+    "pidgin": "quay.io/cdis/pidgin:2023.12"
   },
   "arborist": {
     "deployment_version": "2"
@@ -47,11 +47,12 @@
     "cookie_domain": "planx-pla.net",
     "public_datasets": true,
     "tier_access_level": "libre",
-    "lb_type": "internal"
+    "lb_type": "internal",
+    "es7": true
   },
   "ssjdispatcher": {
     "job_images": {
-      "indexing": "quay.io/cdis/indexs3client:2020.08"
+      "indexing": "quay.io/cdis/indexs3client:2023.12"
     }
   },
   "canary": {
