--- a/qa-tb.planx-pla.net/manifest.json
+++ b/qa-tb.planx-pla.net/manifest.json
@@ -4,22 +4,22 @@
     "goes with qa-nde.planx-pla.net, qa-aids.planx-pla.net and qa-flu.planx-pla.net"
   ],
   "versions": {
-    "arborist": "quay.io/cdis/arborist:2020.08",
+    "arborist": "quay.io/cdis/arborist:2023.12",
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:0.8",
-    "fence": "quay.io/cdis/fence:2020.08",
+    "fence": "quay.io/cdis/fence:2023.12",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.15.3-debian-cloudwatch-1.0",
-    "guppy": "quay.io/cdis/guppy:2020.08",
-    "indexd": "quay.io/cdis/indexd:2020.08",
-    "manifestservice": "quay.io/cdis/manifestservice:2020.08",
-    "peregrine": "quay.io/cdis/peregrine:2020.08",
-    "pidgin": "quay.io/cdis/pidgin:2020.08",
-    "portal": "quay.io/cdis/data-portal:2020.08",
-    "revproxy": "quay.io/cdis/nginx:2020.08",
-    "sheepdog": "quay.io/cdis/sheepdog:2020.08",
-    "sower": "quay.io/cdis/sower:2020.08",
-    "spark": "quay.io/cdis/gen3-spark:2020.08",
-    "tube": "quay.io/cdis/tube:2020.08",
-    "dashboard": "quay.io/cdis/gen3-statics:2020.08"
+    "guppy": "quay.io/cdis/guppy:2023.12",
+    "indexd": "quay.io/cdis/indexd:2023.12",
+    "manifestservice": "quay.io/cdis/manifestservice:2023.12",
+    "peregrine": "quay.io/cdis/peregrine:2023.12",
+    "pidgin": "quay.io/cdis/pidgin:2023.12",
+    "portal": "quay.io/cdis/data-portal:2023.12",
+    "revproxy": "quay.io/cdis/nginx:2023.12",
+    "sheepdog": "quay.io/cdis/sheepdog:2023.12",
+    "sower": "quay.io/cdis/sower:2023.12",
+    "spark": "quay.io/cdis/gen3-spark:2023.12",
+    "tube": "quay.io/cdis/tube:2023.12",
+    "dashboard": "quay.io/cdis/gen3-statics:2023.12"
   },
   "global": {
     "dispatcher_job_num": "10",
@@ -46,7 +46,8 @@
     "netpolicy": "off",
     "cookie_domain": "planx-pla.net",
     "des_namespace": "qa-nde",
-    "lb_type": "internal"
+    "lb_type": "internal",
+    "es7": true
   },
   "arborist": {
     "deployment_version": "2"
@@ -89,7 +90,7 @@
   },
   "ssjdispatcher": {
     "job_images": {
-      "indexing": "quay.io/cdis/indexs3client:2020.08"
+      "indexing": "quay.io/cdis/indexs3client:2023.12"
     }
   },
   "canary": {
