--- a/qa.planx-pla.net/manifest.json
+++ b/qa.planx-pla.net/manifest.json
@@ -7,21 +7,21 @@
     "autodeploy": "yes"
   },
   "versions": {
-    "acronymbot": "quay.io/cdis/acronym-bot:master",
-    "arborist": "quay.io/cdis/arborist:master",
+    "acronymbot": "quay.io/cdis/acronym-bot:2023.12",
+    "arborist": "quay.io/cdis/arborist:2023.12",
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:v1.3.1",
-    "dashboard": "quay.io/cdis/gen3-statics:master",
-    "fence": "quay.io/cdis/fence:master",
+    "dashboard": "quay.io/cdis/gen3-statics:2023.12",
+    "fence": "quay.io/cdis/fence:2023.12",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.15.3-debian-cloudwatch-1.0",
-    "jenkins": "quay.io/cdis/jenkins:master",
-    "jenkins-worker": "quay.io/cdis/gen3-qa-worker:master",
-    "jenkins-ci-worker": "quay.io/cdis/gen3-ci-worker:master",
-    "peregrine": "quay.io/cdis/peregrine:master",
-    "portal": "quay.io/cdis/data-portal:master",
-    "qabot": "quay.io/cdis/qa-bot:master",
-    "revproxy": "quay.io/cdis/nginx:master",
-    "sheepdog": "quay.io/cdis/sheepdog:master",
-    "thor": "quay.io/cdis/thor:master"
+    "jenkins": "quay.io/cdis/jenkins:2023.12",
+    "jenkins-worker": "quay.io/cdis/gen3-qa-worker:2023.12",
+    "jenkins-ci-worker": "quay.io/cdis/gen3-ci-worker:2023.12",
+    "peregrine": "quay.io/cdis/peregrine:2023.12",
+    "portal": "quay.io/cdis/data-portal:2023.12",
+    "qabot": "quay.io/cdis/qa-bot:2023.12",
+    "revproxy": "quay.io/cdis/nginx:2023.12",
+    "sheepdog": "quay.io/cdis/sheepdog:2023.12",
+    "thor": "quay.io/cdis/thor:2023.12"
   },
   "arborist": {
     "deployment_version": "2"
@@ -38,7 +38,8 @@
     "useryaml_s3path": "s3://cdis-gen3-users/qa/user.yaml",
     "netpolicy": "off-for-jenkins",
     "lb_type": "internal",
-    "karpenter": true
+    "karpenter": true,
+    "es7": true
   },
   "canary": {
     "default": 0
