--- a/qaplanetv2.planx-pla.net/manifest.json
+++ b/qaplanetv2.planx-pla.net/manifest.json
@@ -4,20 +4,20 @@
     "That's all I have to say"
   ],
   "versions": {
-    "arborist": "quay.io/cdis/arborist:2021.01",
+    "arborist": "quay.io/cdis/arborist:2023.12",
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:0.8",
-    "fence": "quay.io/cdis/fence:2021.01",
+    "fence": "quay.io/cdis/fence:2023.12",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.10.2-debian-cloudwatch-1.0",
-    "indexd": "quay.io/cdis/indexd:2021.01",
+    "indexd": "quay.io/cdis/indexd:2023.12",
     "jupyterhub": "quay.io/occ_data/jupyterhub:master",
-    "peregrine": "quay.io/cdis/peregrine:2021.01",
-    "pidgin": "quay.io/cdis/pidgin:2021.01",
-    "portal": "quay.io/cdis/data-portal:2021.01",
+    "peregrine": "quay.io/cdis/peregrine:2023.12",
+    "pidgin": "quay.io/cdis/pidgin:2023.12",
+    "portal": "quay.io/cdis/data-portal:2023.12",
     "revproxy": "quay.io/cdis/nginx:1.17.6-ctds-1.0.1",
-    "sheepdog": "quay.io/cdis/sheepdog:2021.01",
-    "spark": "quay.io/cdis/gen3-spark:2021.01",
-    "manifestservice": "quay.io/cdis/manifestservice:2021.01",
-    "wts": "quay.io/cdis/workspace-token-service:2021.01",
+    "sheepdog": "quay.io/cdis/sheepdog:2023.12",
+    "spark": "quay.io/cdis/gen3-spark:2023.12",
+    "manifestservice": "quay.io/cdis/manifestservice:2023.12",
+    "wts": "quay.io/cdis/workspace-token-service:2023.12",
     "tube": "quay.io/cdis/tube:master"
   },
   "arranger": {
@@ -45,7 +45,8 @@
     "useryaml_s3path": "s3://cdis-gen3-users/qa/user.yaml",
     "netpolicy": "on",
     "lb_type": "internal",
-    "argocd": "true"
+    "argocd": "true",
+    "es7": true
   },
   "canary": {
     "default": 0
